# telescope

./: .gitattributes  .gitignore  .rls.toml  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  rustfmt.toml  spec.md  syntax.ebnf
libstd/: core.tsc
src/: ast.rs  atom.lalrpop  atom.rs  buffer.rs  env.rs  error.rs  eval.rs  file.rs  forms.rs  input.rs  lexer.rs  lib.rs  list.rs  main.rs  ops.rs  parse.lalrpop  parse.rs  parser.rs  parsercombine.rs  repl.rs  stream.rs  token.rs  util.rs
src/ast/: atom.rs  function.rs  list.rs  mod.rs
src/syntax/: error.rs  lexer.rs  mod.rs  parser.rs
src/types/: atom.rs  conv.rs  expr.rs  function.rs  list.rs  mac.rs  map.rs  mod.rs  symbol.rs  vector.rs
tests/: fibonacci.tsc  parsing_tests.rs  test.tsc  tests.rs
