[package]
authors = ["James Zhu <jameszhu@berkeley.edu>"]
name = "telescope"
version = "0.6.0"
description = "An elegant Lisp, for a more civilized age."

[dependencies]
clap = "2.25.0"
combine = "2.3.0"
conv = "0.3.3"
derive-error-chain = "0.11.0"
error-chain = "0.11.0"
float-cmp = "0.2.3"
itertools = "0.6.0"
lazy_static = "0.2.8"
quickcheck = "0.4.1"
rustyline = "1.0.0"
unicode-xid = "0.1.0"

[[bin]]
name = "tele"
path = "src/main.rs"
