[package]
authors = ["James Zhu <jameszhu@berkeley.edu>"]
name = "telescope"
version = "0.6.0"
description = "An elegant Lisp, for a more civilized age."

[dependencies]
clap = "2.31.2"
combine = "3.3.1"
conv = "0.3.3"
float-cmp = "0.4.0"
itertools = "0.7.8"
lazy_static = "1.0.0"
quickcheck = "0.6.2"
rustyline = "1.0.0"
unicode-xid = "0.1.0"
failure = "0.1.1"
failure_derive = "0.1.1"

[[bin]]
name = "tele"
path = "src/main.rs"
